clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/move_when_mut_borrowed/move_when_mut_borrowed.cbs
// RUN: %clang_cc1 -verify %s

typedef struct {
  int a;
} S;

S *_Borrow foo(int *_Borrow);
S *_Borrow bar(S *_Borrow, int);

int *owned test1(int *owned p) {
  S *_Borrow p1 = foo(&_Mut *p); // expected-note {{`*p` is borrowed here}}
  S *_Borrow p2 = bar(p1, 2); // expected-note {{`(*p1).a` is borrowed here}}
  int *owned q= p; // expected-error {{cannot move out of `p` because it is borrowed}}
  p1->a = 2; // expected-error {{cannot assign to `(*p1).a` because it is borrowed}}
  p2->a = 3;
  return q;
}

int *owned test2(int *owned p) {
  S *_Borrow p1 = (S *_Borrow)(S *)(int *)&_Mut *p;
  int *owned q= p;
  p1->a = 2;
  return q;
}
